solved overflow issue, still missing icons

--- a/app/sass/pages/_planner.scss
+++ b/app/sass/pages/_planner.scss
@@ -11,7 +11,7 @@
 
 
   .goals {
-    overflow-y: auto;
+    overflow-y: scroll;
     width: 40%;
     height: 100%;
     float: left;
